@startuml
skinparam nodesep 10
hide circle
hide empty members
class "VirksomhetsinformasjonUnderenhet" [[{TODO: beskriv klassen}]] {
    {field} id : uriorcurie  
    {field} oppstartsdato : Dato  
    {field} navn : Virksomhetsnavn  
    {field} organisasjonsnummer : Organisasjonsnummer  
    {field} nedleggelsesdato : Dato  
}
class "Aktivitet" [[{TODO: beskriv klassen}]] {
    {field} id : uriorcurie  
    {field} datoGyldigFra : Dato  
}
class "Kontaktopplysning" [[{TODO: beskriv klassen}]] {
    {field} id : uriorcurie  
    {field} e_postadresse : E_postadresse  
    {field} nettadresse : URL  
    {field} mobilnummerUtgaar : boolean  
    {field} e_postadresseUtgaar : boolean  
    {field} nettadresseUtgaar : boolean  
    {field} telefonnummerUtgaar : boolean  
}
class "Postadresse" [[{TODO: beskriv klassen}]] {
    {field} id : uriorcurie  
    {field} coNavn : string  
    {field} vNavn : string  
    {field} utgaar : boolean  
}
class "Beliggenhetsadresse" [[{TODO: beskriv klassen}]] {
    {field} id : uriorcurie  
    {field} coNavn : string  
    {field} vNavn : string  
}
class "VirksomhetsinformasjonHovedenhet" [[{TODO: beskriv klassen}]] {
    {field} id : uriorcurie  
    {field} organisasjonsform : Organisasjonsform  
    {field} virksomhetstype : Virksomhetstype  
    {field} organisasjonsnummer : Organisasjonsnummer  
    {field} navn : Virksomhetsnavn  
    {field} maalform : Maalform  
    {field} oppfyllerKravTilNaeringsvirksomhet : boolean  
    {field} venterAAFaaAnsatte : boolean  
    {field} datoForAvtale : Dato  
    {field} stiftelsesdato : Dato  
    {field} vedtektsdato : Dato  
    {field} formaal : string  
    {field} harAnsvarsbegrensning : boolean  
    {field} ansvarsform : Ansvarsform  
    {field} meldtOpploesning : boolean  
    {field} meldtOmgjoeringAvOpploesning : boolean  
    {field} bekreftelseProtokollSletting : boolean  
    {field} registrertITilknyttetRegister : TilknyttetRegistertype  [0..*]
    {field} bekreftelseProtokollOpploesningOgOmgjoering : boolean  
}
class "GeneratedContainer" [[{TODO: beskriv containerklassen}]] {

}
"VirksomhetsinformasjonUnderenhet" --> "0..1" "Aktivitet" : "aktivitet"
"VirksomhetsinformasjonUnderenhet" --> "0..1" "Kontaktopplysning" : "kontaktopplysning"
"VirksomhetsinformasjonUnderenhet" --> "0..1" "Postadresse" : "postadresse"
"VirksomhetsinformasjonUnderenhet" --> "0..1" "Beliggenhetsadresse" : "beliggenhetsadresse"
"VirksomhetsinformasjonHovedenhet" --> "0..*" "VirksomhetsinformasjonUnderenhet" : "virksomhetsinformasjonUnderenhet"
"GeneratedContainer" *--> "0..*" "VirksomhetsinformasjonUnderenhet" : "virksomhetsinformasjonUnderenheter"
"VirksomhetsinformasjonHovedenhet" --> "0..*" "VirksomhetsinformasjonUnderenhet" : "virksomhetsinformasjonUnderenhet"(i)
class "Matrikkelnummer" [[{TODO: beskriv klassen}]] {
    {field} id : uriorcurie  
    {field} kommunenummer : Kommunenummer  
    {field} gaardsnummer : integer  
    {field} bruksnummer : integer  
    {field} festenummer : integer  
}
class "EierskifteAktivitet" [[{TODO: beskriv klassen}]] {
    {field} id : uriorcurie  
    {field} typeEierskifte : TypeEierskifte  
    {field} organisasjonsnummerHovedenhet : Organisasjonsnummer  
    {field} gjelderHeleAktiviteten : boolean  
    {field} eierskiftedato : Dato  
}
class "Foretaksinformasjon" [[{TODO: beskriv klassen}]] {
    {field} id : uriorcurie  
    {field} oenskesRegistrertIForetaksregisteret : boolean  
    {field} oenskesSlettetIForetaksregisteret : boolean  
}
class "Signaturrett" [[{TODO: beskriv klassen}]] {
    {field} id : uriorcurie  
    {field} utgaar : boolean  
    {field} bekreftelseProtokoll : boolean  
}
class "Prokura" [[{TODO: beskriv klassen}]] {
    {field} id : uriorcurie  
    {field} utgaar : boolean  
    {field} bekreftelseProtokoll : boolean  
}
class "Rolletypegruppe" [[{TODO: beskriv klassen}]] {
    {field} id : uriorcurie  
    {field} rollegruppe : Rolletypegruppe_2  
    {field} utgaar : boolean  
    {field} kjoennssammensetningAnsattvalgte : boolean  
    {field} kjoennssammensetningStyre : boolean  
    {field} bekreftelseProtokoll : boolean  
}
class "Omdanning" [[{TODO: beskriv klassen}]] {
    {field} id : uriorcurie  
    {field} nyOrganisasjonsform : Organisasjonsform  
}
class "Varslingsadresse" [[{TODO: beskriv klassen}]] {
    {field} id : uriorcurie  
    {field} e_postadresse : E_postadresse  
}
class "Forretningsadresse" [[{TODO: beskriv klassen}]] {
    {field} id : uriorcurie  
    {field} coNavn : string  
    {field} vNavn : string  
    {field} utgaar : boolean  
}
class "Innrapportering" [[{TODO: beskriv klassen}]] {
    {field} id : uriorcurie  
    {field} versjon : Versjonsnummer  
    {field} innsendertjenste : InnsendertjenesteType  
    {field} innsendingstidspunkt : DatoKlokkeslett  
    {field} maalformForTilbakemelding : Maalform  
    {field} tjenestevariant : Tjenestevariant  
    {field} lenkeForEttersending : URL  
}
"VirksomhetsinformasjonHovedenhet" --> "0..*" "Matrikkelnummer" : "matrikkelnummer"
"VirksomhetsinformasjonHovedenhet" --> "0..*" "EierskifteAktivitet" : "eierskifte"
"VirksomhetsinformasjonHovedenhet" --> "0..1" "Foretaksinformasjon" : "foretaksinformasjon"
"VirksomhetsinformasjonHovedenhet" --> "0..1" "Signaturrett" : "signaturrett"
"VirksomhetsinformasjonHovedenhet" --> "0..1" "Prokura" : "prokura"
"VirksomhetsinformasjonHovedenhet" --> "0..*" "Rolletypegruppe" : "rolletypegruppe"
"VirksomhetsinformasjonHovedenhet" --> "0..1" "Omdanning" : "omdanning"
"VirksomhetsinformasjonHovedenhet" --> "0..1" "Aktivitet" : "aktivitet"
"VirksomhetsinformasjonHovedenhet" --> "0..1" "Kontaktopplysning" : "kontaktopplysning"
"VirksomhetsinformasjonHovedenhet" --> "0..1" "Postadresse" : "postadresse"
"VirksomhetsinformasjonHovedenhet" --> "0..1" "Varslingsadresse" : "varslingsadresse"
"VirksomhetsinformasjonHovedenhet" --> "0..1" "Forretningsadresse" : "forretningsadresse"
"Innrapportering" --> "1" "VirksomhetsinformasjonHovedenhet" : "virksomhetsinformasjon"
"GeneratedContainer" *--> "0..*" "VirksomhetsinformasjonHovedenhet" : "virksomhetsinformasjonHovedenheter"
"Innrapportering" --> "0..1" "VirksomhetsinformasjonHovedenhet" : "virksomhetsinformasjon"(i)
class "Gebyransvarlig" [[{TODO: beskriv klassen}]] {
    {field} id : uriorcurie  
    {field} eksternFakturareferanse : string  
    {field} gebyransvarligType : GebyransvarligType  
    {field} e_postadresse : E_postadresse  
}
class "Virksomhet" [[{TODO: beskriv klassen}]] {
    {field} id : uriorcurie  
    {field} virksomhetsidentifikator : Organisasjonsnummer  
    {field} navn : Virksomhetsnavn  
}
class "Innsender" [[{TODO: beskriv klassen}]] {
    {field} id : uriorcurie  
    {field} e_postadresse : E_postadresse  
    {field} test : string  
}
class "Rolleinnehaver" [[{TODO: beskriv klassen}]] {
    {field} id : uriorcurie  
    {field} oenskerAAFratre : boolean  
    {field} avdelingskontor : Organisasjonsnummer  
    {field} fratredenErVarslet : boolean  
    {field} valgtAv : ValgtAv  
}
class "SignaturberettigetEllerProkurist" [[{TODO: beskriv klassen}]] {
    {field} id : uriorcurie  
}
"Gebyransvarlig" --> "0..1" "Virksomhet" : "virksomhet"
"Innsender" --> "0..1" "Virksomhet" : "virksomhet"
"Rolleinnehaver" --> "0..1" "Virksomhet" : "virksomhet"
"SignaturberettigetEllerProkurist" --> "0..1" "Virksomhet" : "virksomhet"
"GeneratedContainer" *--> "0..*" "Virksomhet" : "virksomheter"
"Rolleinnehaver" --> "0..1" "Virksomhet" : "virksomhet"(i)
"SignaturberettigetEllerProkurist" --> "0..1" "Virksomhet" : "virksomhet"(i)
"Innsender" --> "0..1" "Virksomhet" : "virksomhet"(i)
"Gebyransvarlig" --> "0..1" "Virksomhet" : "virksomhet"(i)
class "Vegadresse" [[{TODO: beskriv klassen}]] {
    {field} id : uriorcurie  
    {field} vegadresseId : string  
    {field} adressenavn : string  
    {field} bruksenhetsnummer : Bruksenhetsnummer  
    {field} adressetilleggsnavn : string  
    {field} kommunenummer : Kommunenummer  
    {field} postnummer : Postnummer  
}
class "Adressenummer" [[{TODO: beskriv klassen}]] {
    {field} id : uriorcurie  
    {field} bokstav : Husbokstav  
}
"Vegadresse" --> "1" "Adressenummer" : "nummer"
"Beliggenhetsadresse" --> "0..1" "Vegadresse" : "vegadresse"
"Forretningsadresse" --> "0..1" "Vegadresse" : "vegadresse"
"Postadresse" --> "0..1" "Vegadresse" : "vegadresse"
"GeneratedContainer" *--> "0..*" "Vegadresse" : "vegadresseer"
"Forretningsadresse" --> "0..1" "Vegadresse" : "vegadresse"(i)
"Postadresse" --> "0..1" "Vegadresse" : "vegadresse"(i)
"Beliggenhetsadresse" --> "0..1" "Vegadresse" : "vegadresse"(i)
class "Mobilnummer" [[{TODO: beskriv klassen}]] {
    {field} id : uriorcurie  
    {field} internasjonaltPrefiks : InternasjonaltPrefiks  
    {field} nasjonaltNummer : NasjonaltNummer  
}
"Varslingsadresse" --> "0..1" "Mobilnummer" : "mobilnummer"
"GeneratedContainer" *--> "0..*" "Varslingsadresse" : "varslingsadresseer"
"VirksomhetsinformasjonHovedenhet" --> "0..1" "Varslingsadresse" : "varslingsadresse"(i)
class "TypeAktivitet" [[{TODO: beskriv klassen}]] {
    {field} id : uriorcurie  
    {field} rekkefoelge : integer  
    {field} aktivitetskode : Aktivitetskode  
    {field} tekst : Tekst1000  
}
"GeneratedContainer" *--> "0..*" "TypeAktivitet" : "typeAktiviteter"
class "Telefonnummer" [[{TODO: beskriv klassen}]] {
    {field} id : uriorcurie  
    {field} internasjonaltPrefiks : InternasjonaltPrefiks  
    {field} nasjonaltNummer : NasjonaltNummer  
}
"Kontaktopplysning" --> "0..1" "Telefonnummer" : "telefonnummer"
"GeneratedContainer" *--> "0..*" "Telefonnummer" : "telefonnummerer"
"Kontaktopplysning" --> "0..1" "Telefonnummer" : "telefonnummer"(i)
class "Stedsadresse" [[{TODO: beskriv klassen}]] {
    {field} id : uriorcurie  
    {field} stedsnavn : string  
    {field} kommunenummer : Kommunenummer  
    {field} postnummer : Postnummer  
}
"Beliggenhetsadresse" --> "0..1" "Stedsadresse" : "stedsadresse"
"Forretningsadresse" --> "0..1" "Stedsadresse" : "stedsadresse"
"Postadresse" --> "0..1" "Stedsadresse" : "stedsadresse"
"GeneratedContainer" *--> "0..*" "Stedsadresse" : "stedsadresseer"
"Forretningsadresse" --> "0..1" "Stedsadresse" : "stedsadresse"(i)
"Postadresse" --> "0..1" "Stedsadresse" : "stedsadresse"(i)
"Beliggenhetsadresse" --> "0..1" "Stedsadresse" : "stedsadresse"(i)
class "Signering" [[{TODO: beskriv klassen}]] {
    {field} id : uriorcurie  
}
"Innrapportering" --> "0..1" "Signering" : "signering"
"GeneratedContainer" *--> "0..*" "Signering" : "signeringer"
"Innrapportering" --> "0..1" "Signering" : "signering"(i)
class "Signaturrettsbestemmelse" [[{TODO: beskriv klassen}]] {
    {field} id : uriorcurie  
    {field} regel : SignaturrettEllerProkuraregel  
}
class "Rollesett" [[{TODO: beskriv klassen}]] {
    {field} id : uriorcurie  
    {field} rolletype : Rolletype  
    {field} minsteMengdeangivelse : Mengdeangivelse  
    {field} minsteAntall : integer  
}
"Signaturrettsbestemmelse" --> "1..*" "Rollesett" : "rollesett"
"Signaturrett" --> "0..*" "Signaturrettsbestemmelse" : "signaturrettsbestemmelsse"
"GeneratedContainer" *--> "0..*" "Signaturrettsbestemmelse" : "signaturrettsbestemmelseer"
"Signaturrett" --> "0..*" "Signaturrettsbestemmelse" : "signaturrettsbestemmelsse"(i)
"GeneratedContainer" *--> "0..*" "Signaturrett" : "signaturretter"
"VirksomhetsinformasjonHovedenhet" --> "0..1" "Signaturrett" : "signaturrett"(i)
class "Person" [[{TODO: beskriv klassen}]] {
    {field} id : uriorcurie  
    {field} mappingId : PersonMappingId  
    {field} fulltNavn : string  
}
"SignaturberettigetEllerProkurist" --> "0..1" "Person" : "person"
"Rollesett" --> "0..*" "SignaturberettigetEllerProkurist" : "signaturberettigetEllerProkurist"
"GeneratedContainer" *--> "0..*" "SignaturberettigetEllerProkurist" : "signaturberettigetEllerProkurister"
"Rollesett" --> "0..*" "SignaturberettigetEllerProkurist" : "signaturberettigetEllerProkurist"(i)
class "Rolle" [[{TODO: beskriv klassen}]] {
    {field} id : uriorcurie  
    {field} rolletype : Rolletype  
    {field} tildelerAvRolle : PersonMappingId  
}
"Rolletypegruppe" --> "0..*" "Rolle" : "rolle"
"GeneratedContainer" *--> "0..*" "Rolletypegruppe" : "rolletypegruppeer"
"VirksomhetsinformasjonHovedenhet" --> "0..*" "Rolletypegruppe" : "rolletypegruppe"(i)
class "Prokurabestemmelse" [[{TODO: beskriv klassen}]] {
    {field} id : uriorcurie  
    {field} regel : SignaturrettEllerProkuraregel  
}
"Prokurabestemmelse" --> "1..*" "Rollesett" : "rollesett"
"GeneratedContainer" *--> "0..*" "Rollesett" : "rollesetter"
"Prokurabestemmelse" --> "0..*" "Rollesett" : "rollesett"(i)
"Signaturrettsbestemmelse" --> "0..*" "Rollesett" : "rollesett"(i)
class "Ansvarsandel" [[{TODO: beskriv klassen}]] {
    {field} id : uriorcurie  
    {field} prosent : float  
}
"Rolleinnehaver" --> "0..1" "Person" : "person"
"Rolleinnehaver" --> "0..1" "Ansvarsandel" : "ansvarsandel"
"Rolle" --> "1" "Rolleinnehaver" : "rolleinnehaver"
"GeneratedContainer" *--> "0..*" "Rolleinnehaver" : "rolleinnehaverer"
"Rolle" --> "0..1" "Rolleinnehaver" : "rolleinnehaver"(i)
"GeneratedContainer" *--> "0..*" "Rolle" : "rolleer"
"Rolletypegruppe" --> "0..*" "Rolle" : "rolle"(i)
"Prokura" --> "0..*" "Prokurabestemmelse" : "prokurabestemmelse"
"GeneratedContainer" *--> "0..*" "Prokurabestemmelse" : "prokurabestemmelseer"
"Prokura" --> "0..*" "Prokurabestemmelse" : "prokurabestemmelse"(i)
"GeneratedContainer" *--> "0..*" "Prokura" : "prokuraer"
"VirksomhetsinformasjonHovedenhet" --> "0..1" "Prokura" : "prokura"(i)
class "Postboksadresse" [[{TODO: beskriv klassen}]] {
    {field} id : uriorcurie  
    {field} postboksnummer : Postboksnummer  
    {field} postboksanleggsnavn : string  
    {field} postnummer : Postnummer  
    {field} kommunenummer : Kommunenummer  
}
"Postadresse" --> "0..1" "Postboksadresse" : "postboksadresse"
"GeneratedContainer" *--> "0..*" "Postboksadresse" : "postboksadresseer"
"Postadresse" --> "0..1" "Postboksadresse" : "postboksadresse"(i)
class "InternasjonalAdresse" [[{TODO: beskriv klassen}]] {
    {field} id : uriorcurie  
    {field} adressenavn : string  
    {field} adressenummer : string  
    {field} bygning : string  
    {field} etasjenummer : string  
    {field} boenhet : string  
    {field} postboks : string  
    {field} postkode : string  
    {field} byEllerStedsnavn : string  
    {field} region : string  
    {field} distriktEllerBydel : string  
    {field} friAdressetekst : string  [0..*]
    {field} adresseidentifikator : string  
    {field} landkode : Landkode  
}
"Postadresse" --> "0..1" "InternasjonalAdresse" : "internasjonalAdresse"
"GeneratedContainer" *--> "0..*" "Postadresse" : "postadresseer"
"VirksomhetsinformasjonHovedenhet" --> "0..1" "Postadresse" : "postadresse"(i)
"VirksomhetsinformasjonUnderenhet" --> "0..1" "Postadresse" : "postadresse"(i)
"Gebyransvarlig" --> "0..1" "Person" : "person"
"Innsender" --> "0..1" "Person" : "person"
"GeneratedContainer" *--> "0..*" "Person" : "personer"
"Rolleinnehaver" --> "0..1" "Person" : "person"(i)
"SignaturberettigetEllerProkurist" --> "0..1" "Person" : "person"(i)
"Innsender" --> "0..1" "Person" : "person"(i)
"Gebyransvarlig" --> "0..1" "Person" : "person"(i)
"GeneratedContainer" *--> "0..*" "Omdanning" : "omdanninger"
"VirksomhetsinformasjonHovedenhet" --> "0..1" "Omdanning" : "omdanning"(i)
"Gebyransvarlig" --> "0..1" "Mobilnummer" : "mobilnummer"
"Innsender" --> "0..1" "Mobilnummer" : "mobilnummer"
"Kontaktopplysning" --> "0..1" "Mobilnummer" : "mobilnummer"
"GeneratedContainer" *--> "0..*" "Mobilnummer" : "mobilnummerer"
"Varslingsadresse" --> "0..1" "Mobilnummer" : "mobilnummer"(i)
"Kontaktopplysning" --> "0..1" "Mobilnummer" : "mobilnummer"(i)
"Innsender" --> "0..1" "Mobilnummer" : "mobilnummer"(i)
"Gebyransvarlig" --> "0..1" "Mobilnummer" : "mobilnummer"(i)
"GeneratedContainer" *--> "0..*" "Matrikkelnummer" : "matrikkelnummerer"
"VirksomhetsinformasjonHovedenhet" --> "0..*" "Matrikkelnummer" : "matrikkelnummer"(i)
"GeneratedContainer" *--> "0..*" "Kontaktopplysning" : "kontaktopplysninger"
"VirksomhetsinformasjonHovedenhet" --> "0..1" "Kontaktopplysning" : "kontaktopplysning"(i)
"VirksomhetsinformasjonUnderenhet" --> "0..1" "Kontaktopplysning" : "kontaktopplysning"(i)
"GeneratedContainer" *--> "0..*" "InternasjonalAdresse" : "internasjonalAdresseer"
"Postadresse" --> "0..1" "InternasjonalAdresse" : "internasjonalAdresse"(i)
"Innrapportering" --> "1" "Innsender" : "innsender"
"GeneratedContainer" *--> "0..*" "Innsender" : "innsenderer"
"Innrapportering" --> "0..1" "Innsender" : "innsender"(i)
class "Fagsystemreferanse" [[{TODO: beskriv klassen}]] {
    {field} id : uriorcurie  
    {field} fagsystemID : FagsystemId  
    {field} orgnrFagsystem : Organisasjonsnummer  
    {field} referanseFagsystem : Tekst50  
}
"Innrapportering" --> "0..1" "Gebyransvarlig" : "gebyransvarlig"
"Innrapportering" --> "0..1" "Fagsystemreferanse" : "fagsystemReferanse"
"GeneratedContainer" *--> "0..*" "Innrapportering" : "innrapporteringer"
class "DelerEierskifte" [[{TODO: beskriv klassen}]] {
    {field} id : uriorcurie  
    {field} beskrivelse : string  
    {field} underenhet : Organisasjonsnummer  [0..*]
}
class "Broek" [[{TODO: beskriv klassen}]] {
    {field} id : uriorcurie  
    {field} teller : integer  
    {field} nevner : integer  
}
"GeneratedContainer" *--> "0..*" "Gebyransvarlig" : "gebyransvarliger"
"GeneratedContainer" *--> "0..*" "Fagsystemreferanse" : "fagsystemreferanseer"
"GeneratedContainer" *--> "0..*" "DelerEierskifte" : "delerEierskifteer"
"GeneratedContainer" *--> "0..*" "EierskifteAktivitet" : "eierskifteAktiviteter"
"GeneratedContainer" *--> "0..*" "Foretaksinformasjon" : "foretaksinformasjoner"
"GeneratedContainer" *--> "0..*" "Broek" : "broeker"
"GeneratedContainer" *--> "0..*" "Ansvarsandel" : "ansvarsandeler"
"GeneratedContainer" *--> "0..*" "Aktivitet" : "aktiviteter"
"GeneratedContainer" *--> "0..*" "Beliggenhetsadresse" : "beliggenhetsadresseer"
"GeneratedContainer" *--> "0..*" "Adressenummer" : "adressenummerer"
"GeneratedContainer" *--> "0..*" "Forretningsadresse" : "forretningsadresseer"
"Innrapportering" --> "0..1" "Gebyransvarlig" : "gebyransvarlig"(i)
"VirksomhetsinformasjonHovedenhet" --> "0..1" "Forretningsadresse" : "forretningsadresse"(i)
"VirksomhetsinformasjonHovedenhet" --> "0..1" "Foretaksinformasjon" : "foretaksinformasjon"(i)
"Innrapportering" --> "0..1" "Fagsystemreferanse" : "fagsystemReferanse"(i)
"EierskifteAktivitet" --> "0..1" "DelerEierskifte" : "hvilkeDeler"
"VirksomhetsinformasjonHovedenhet" --> "0..*" "EierskifteAktivitet" : "eierskifte"(i)
"EierskifteAktivitet" --> "0..1" "DelerEierskifte" : "hvilkeDeler"(i)
"Ansvarsandel" --> "0..1" "Broek" : "broek"
"Ansvarsandel" --> "0..1" "Broek" : "broek"(i)
"VirksomhetsinformasjonUnderenhet" --> "0..1" "Beliggenhetsadresse" : "beliggenhetsadresse"(i)
"Rolleinnehaver" --> "0..1" "Ansvarsandel" : "ansvarsandel"(i)
"Aktivitet" --> "1" "Aktivitet" : "aktivitet"
"Adressenummer" --> "1" "Adressenummer" : "nummer"
@enduml
